<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_pure" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" >

            <TextView
                android:id="@+id/usernametextView"
                style="@style/RegisterTextLabel"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/account_username" />

            <EditText
                android:id="@+id/usernameedittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/usernametextView"
                android:layout_below="@+id/usernametextView"
                android:ems="10" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/passwordtextview"
                style="@style/RegisterTextLabel"
                android:layout_alignLeft="@+id/usernameedittext"
                android:layout_below="@+id/usernameedittext"
                android:text="@string/account_password" />

            <EditText
                android:id="@+id/passwordedittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/passwordtextview"
                android:layout_below="@+id/passwordtextview"
                android:inputType="textPassword"
                android:ems="10" />

            <TextView
                android:id="@+id/nametextview"
                style="@style/RegisterTextLabel"
                android:layout_alignLeft="@+id/passwordedittext"
                android:layout_below="@+id/passwordedittext"
                android:text="@string/account_name" />

            <EditText
                android:id="@+id/nameedittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/nametextview"
                android:layout_below="@+id/nametextview"
                android:ems="10" />

            <TextView
                android:id="@+id/emailtextview"
                style="@style/RegisterTextLabel"
                android:layout_alignLeft="@+id/nameedittext"
                android:layout_below="@+id/nameedittext"
                android:text="@string/account_email" />

            <EditText
                android:id="@+id/emaledittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/emailtextview"
                android:layout_below="@+id/emailtextview"
                android:ems="10" />
            
            <LinearLayout
                android:id="@+id/brithLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emaledittext"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/birthtextview"
                        style="@style/RegisterTextLabel"
                        android:text="@string/account_dateofbirth" />

                    <EditText
                        android:id="@+id/birthedittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >
                    
                    <TextView
                        android:id="@+id/gendertextview"
                        style="@style/RegisterTextLabel"
                        android:text="@string/account_dateofgender" />

                    <EditText
                        android:id="@+id/genderedittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10" />
                    
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/addresstextview"
                style="@style/RegisterTextLabel"
                android:layout_alignLeft="@+id/brithLayout"
                android:layout_below="@+id/brithLayout"
                android:text="@string/account_address" />

            <EditText
                android:id="@+id/addressedittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/addresstextview"
                android:layout_below="@+id/addresstextview"
                android:ems="10" />

            <TextView
                android:id="@+id/codetextview"
                style="@style/RegisterTextLabel"
                android:layout_alignLeft="@+id/addressedittext"
                android:layout_below="@+id/addressedittext"
                android:text="@string/klink_membercode" />

            <EditText
                android:id="@+id/codeedittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/codetextview"
                android:layout_below="@+id/codetextview"
                android:ems="10" />
        </RelativeLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/submit_button" />

    <com.wellad.klink.activity.ui.widget.TopBar
        android:id="@+id/topBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >
    </com.wellad.klink.activity.ui.widget.TopBar>

</RelativeLayout>